Fix: whitespacing between lists and paragraphs

--- a/src/common/02-per-group/type.less
+++ b/src/common/02-per-group/type.less
@@ -50,8 +50,8 @@ pre code {
     white-space: pre-wrap;
 }
 
-ol, ul {
-    margin-bottom: @type-pica-font-size;
+ol + p, ul + p {
+    margin-top: @type-pica-font-size;
 }
 
 //// footer
